[project]
name = "github-analyzer"
version = "0.1.0"
description = "CLI tool for fetching GitHub user profile summaries."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.7.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
[project.scripts]
github-analyzer = "main:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["github_analyzer"]
